syntax = "proto3";

package faltung.nerves.domotics;

option go_package = "github.com/rmrobinson/nerves/services/domotics";

import "google/protobuf/empty.proto";
import "services/domotics/bridge.proto";
import "services/domotics/device.proto";

message Room {
    string id = 1;
    string name = 2;
    string description = 3;

    // The Update of controllable and viewable devices located in this room.
    // It is not strictly safe to assume certain types will only appear once in this Update.
    repeated Device devices = 10;
}

message Floor {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 level = 4;

    // Some floors may have sensors or other things (lights?) not isolated to a single room.
    repeated Device devices = 10;
    // Update of rooms on this floor.
    repeated Room rooms = 11;
}

message Building {
    string id = 1;
    string name = 2;
    string description = 3;
    string address = 4;

    // A building may have some devices (sensors mostly) that are not tied to a given room.
    repeated Device devices = 10;
    // Bridges active in this building
    repeated Bridge bridges = 11;
    // Collection of floors in this building.
    repeated Floor floors = 12;
}


message ListFloorsRequest {
    string building_id = 1;
}
message ListFloorsResponse {
    repeated Floor floors = 1;
}

message GetFloorRequest {
    string id = 1;
}

message BuildingUpdate {
    enum Action {
        ADDED = 0;
        CHANGED = 1;
        REMOVED = 2;
    }

    Action action = 1;
    Building building = 2;
    string floor_id = 3;
}
message FloorUpdate {
    enum Action {
        ADDED = 0;
        CHANGED = 1;
        REMOVED = 2;
    }

    Action action = 1;
    Floor floor = 2;
    string building_id = 3;
}
message RoomUpdate {
    enum Action {
        ADDED = 0;
        CHANGED = 1;
        REMOVED = 2;
    }

    Action action = 1;
    Room room = 2;
    string floor_id = 3;
}

message StreamUpdatesRequest {
}
message Update {
    oneof Update {
        DeviceUpdate device_update = 1;
        BridgeUpdate bridge_update = 2;
        FloorUpdate floor_update = 3;
        RoomUpdate room_update = 4;
        BuildingUpdate building_update = 5;
    }
}

service BuildingService {
    rpc ListFloors(ListFloorsRequest) returns (ListFloorsResponse) {}

    rpc GetFloor(GetFloorRequest) returns (Floor) {}

    rpc StreamUpdates(StreamUpdatesRequest) returns (stream Update) {}

}

message CreateBuildingRequest {
    Building building = 1;
}
message UpdateBuildingRequest {
    string id = 1;
    string version = 2;
    Building building = 10;
}
message DeleteBuildingRequest {
    string id = 1;
}

message CreateFloorRequest {
    string building_id = 1;
    Floor floor = 2;
}
message UpdateFloorRequest {
    string id = 1;
    string version = 2;
    Floor floor = 10;
}
message DeleteFloorRequest {
    string id = 1;
}

message CreateRoomRequest {
    string floor_id = 1;
    Room room = 2;
}
message UpdateRoomRequest {
    string id = 1;
    string version = 2;
    Room room = 10;
}
message DeleteRoomRequest {
    string id = 1;
}

message AddBridgeRequest {
    string parent_id = 1;
    string bridge_id = 2;
}
message RemoveBridgeRequest {
    string parent_id = 1;
    string bridge_id = 2;
}
message AddDeviceRequest {
    string parent_id = 1;
    string device_id = 2;
}
message RemoveDeviceRequest {
    string parent_id = 1;
    string device_id = 2;
}

service BuildingAdminService {
    rpc CreateBuilding(CreateBuildingRequest) returns (Building) {}

    rpc UpdateBuilding(UpdateBuildingRequest) returns (Building) {}

    rpc DeleteBuilding(DeleteBuildingRequest) returns (google.protobuf.Empty) {}

    //rpc AddBuildingBridge(AddBridgeRequest) returns (Building) {}

    //rpc RemoveBuildingBridge(RemoveBridgeRequest) returns (Building) {}


    rpc CreateFloor(CreateFloorRequest) returns (Floor) {}

    rpc UpdateFloor(UpdateFloorRequest) returns (Floor) {}

    rpc DeleteFloor(DeleteFloorRequest) returns (google.protobuf.Empty) {}

    //rpc AddFloorDevice(AddDeviceRequest) returns (Floor) {}

    //rpc RemoveFloorDevice(RemoveDeviceRequest) returns (Floor) {}


    rpc CreateRoom(CreateRoomRequest) returns (Room) {}

    rpc UpdateRoom(UpdateRoomRequest) returns (Room) {}

    rpc DeleteRoom(DeleteRoomRequest) returns (google.protobuf.Empty) {}

    //rpc AddRoomDevice(AddDeviceRequest) returns (Room) {}

    //rpc RemoveRoomDevice(RemoveDeviceRequest) returns (Room) {}
}
